# mpd-plasma-dynamics

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  config.yaml  flake.nix  main.cpp  run_jobs.sh  slurm.sh  slurm_job.sh
cmake/: Dependencies.cmake  PackageFetcher.cmake
include/: array2d.hpp  bc_context.hpp  bc_registry.hpp  boundary.hpp  config.hpp  decomposition.hpp  diagnostics.hpp  domain_decomposition.hpp  face_bc.hpp  field_condition.hpp  field_ic.hpp  fields.hpp  geometry.hpp  geometry_registry.hpp  grid.hpp  iboundary_condition.hpp  igeometry.hpp  iinitial_condition.hpp  initial_condition_registry.hpp  integrals.hpp  io_manager.hpp  memory.hpp  mpi_comm.hpp  mpi_manager.hpp  physics.hpp  physics_utils.hpp  solver.hpp  types.hpp  verification.hpp
include/bcs/: axis_symmetry_bc.hpp  inflow_bc.hpp  outer_wall_bc.hpp  outflow_bc.hpp  per_field_bc.hpp  solid_wall_bc.hpp
include/geometries/: coaxial_nozzle.hpp  short_cathode_cosine.hpp  short_cathode_parabolic.hpp  villani_mpdt.hpp
include/ics/: expression_ic.hpp  uniform_mhd.hpp  vtk_ic.hpp
include/output/: write_plt.hpp  write_results.hpp  write_vtk.hpp
src/: array2d.cpp  bc_registry.cpp  boundary.cpp  config.cpp  diagnostics.cpp  domain_decomposition.cpp  face_bc.cpp  fields.cpp  geometry.cpp  geometry_registry.cpp  grid.cpp  initial_condition_registry.cpp  integrals.cpp  io_manager.cpp  main.cpp  memory.cpp  mpi_comm.cpp  mpi_manager.cpp  physics.cpp  solver.cpp  verification.cpp
src/bcs/: axis_symmetry_bc.cpp  inflow_bc.cpp  outer_wall_bc.cpp  outflow_bc.cpp  per_field_bc.cpp  solid_wall_bc.cpp
src/geometries/: coaxial_nozzle.cpp  short_cathode_cosine.cpp  short_cathode_parabolic.cpp  villani_mpdt.cpp
src/ics/: expression_ic.cpp  uniform_mhd.cpp  vtk_ic.cpp
src/output/: write_plt.cpp  write_results.cpp  write_vtk.cpp
